# React-Native-native-security-files

./: README.md  index.js  proguard-rules.pro
android-native-security/: build.gradle
android-native-security/src/main/cpp/: CMakeLists.txt  anti_frida.cpp  ssl_pinning.cpp
android-security/: ActivityStarterModule.kt  ActivityStarterPackage.kt  AppExitModule.kt  AppExitPackage.kt  EmulatorDetection.kt  EmulatorDetectionModule.kt  EmulatorDetectionPackage.kt  NativeIntegrity.kt  PinnedHttpClientFactory.kt  PinnedTrustManager.kt  SecurityDetection.kt  SecurityDetectionModule.kt  SecurityDetectionPackage.kt  SignatureUtil.kt
ios-security/: ActivityStarter.m  ActivityStarter.swift  AppExit.m  AppExit.swift  EmulatorDetection.m  EmulatorDetection.swift  NativeSecurityGate.m  SecurityDetection.m  SecurityDetection.swift
